--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: MATH4753GALEXFLAB3
 Type: Package
-Title: Lab 3 Package Making
+Title: ggmytable
 Version: 0.1.0
 Author: Alex Force
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: Alex Force <michael.a.force-1@ou.edu>
+Description: The function ggmytable takes a dataframe that'll be wrangled, graphed, and summarized.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: dplyr, ggplot2
+Depends: 
+    R (>= 2.10)
